<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_ack_rc</name>
  <version>0.0.0</version>
  <description>RC Teleop node for Project Phoenix using binary serial packets.</description>
  <maintainer email="estickel@umich.edu">elijahstickel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ackermann_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_components</depend>

  <build_depend>pkg-config</build_depend>
  <build_depend>libserial-dev</build_depend>
  <exec_depend>libserial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>